k8s-yaml/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pong
  labels:
    app: ping-pong
spec:
  ports:
    - port: 80
      targetPort: 5000
      name: pong
  selector:
    app: ping-pong
  type: LoadBalancer
