k8s-yaml/ping.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: ping-depl
  labels:
    app: ping
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: ping
    spec:
      containers:
      - name: ping
        image: 'harbor.corp.local/ingress-test/ping:latest'
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: ping-svc
  labels:
    app: ping
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: ping
