k8s-yaml/pong.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: pong-svc
  labels:
    app: pong
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: pong
    spec:
      containers:
      - name: ping
        image: 'harbor.corp.local/ingress-test/pong:latest'
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: pong-svc
  labels:
    app: pong
spec:
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: pong
