k8s-yaml/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
spec:
  rules:
  - http:
      paths:
      - path: /ping
        backend:
          serviceName: ping-svc
          servicePort: 80
      - path: /pong
        backend:
          serviceName: pong-svc
          servicePort: 80
